2008-08-05  Stan Cox  <scox@redhat.com>

	* NEWS: Updated $$vars, $$parms, $$locals.
	* tapsets.cxx (visit_target_symbol): Missing break typo.

2008-08-04  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (dwarf_var_expanding_copy_visitor::visit_target_symbol): 
	Add support for $$vars, $$parms, and $$locals.
	* stapprobes.5.in: Likewise.
	* doc/langref.tex: Likewise.

2008-08-02  Frank Ch. Eigler  <fche@elastic.org>

	* translate.h (translator_output::assert_0_indent): New function.
	* translate.cxx (emit_*): Add a couple of calls to confirm
	newline(1)/(-1) nest matching.

2008-07-30  Dave Brolley  <brolley@redhat.com>

	* stap-client (create_request): No need for random suffix for
	cmdline and sysinfo files.
	* stap-server (read_data_file): File name is exactly as specified.
	Check that it exists.

2008-07-29  Dave Brolley  <brolley@redhat.com>

	* Makefile.am (bin_SCRIPTS): add stap-find-servers, stap-start-server,
	stap-find-or-start-server, stap-stop-server.
	(EXTRA_DIST): Likewise.
	(check): Ensure that a compatible systemtap server is running before
	running the tests, if requested. If we start a sterver, stop it after
	running the tests.
	(installcheck): Likewise.
	* stap-client (parse_options): Specify stdin as 'scripts/-' on the
	generated command line.
	(create_request): Use $script_file instead of '-'.
	(unpack_response): Existence of the systemtap temp directory is
	optional.
	(find_and_connect_to_server): Use stap-find-servers and choose_server.
	(choose_server): Rewritten from match_server. Examine multiple
	servers.
	(connect_to_server): New function.
	(maybe_call_staprun): Check for existence of a module.
	Use staprun_PATH.
	(staprun_PATH): New function.
	(fatal): Call disconnect_from_server.
	(server_fatal): Likewise.
	* stap-server: Catch SIGTERM and SIGINT.
	(create_response): Check for the existence of $tmpdir_stap.
	(terminate): New function.
	* stap-serverd: Catch SIGTERM and SIGINT.