@@ -1,3 +1,6 @@
+2008-08-07  Frank Ch. Eigler  <fche@elastic.org>
+
+	* utrace.stp: New file, for use by utrace $var expansions.
 
 2008-08-04  Wenji Huang <wenji.huang@oracle.com>
 
